# interview-ai

./: .dockerignore  .env.example  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  config.py  gunicorn.conf.py  pyproject.toml  run.py  sources.list  xunfei_api.py
backend/app/: __init__.py
backend/app/api/: __init__.py  admin.py  analysis.py  auth.py  health.py  interview.py  position.py
backend/app/models/: __init__.py  interview.py  position.py  user.py
backend/app/schemas/: __init__.py  validation.py
backend/app/services/: ai.py  audio.py
backend/app/services/xfyun_services/: __init__.py  speech_recognition.py  speech_synthesis.py  translation.py  utils.py
backend/app/utils/: db.py  float32json.py  pcm_wav.py  split_audio.py
backend/schemas/: validation.py
docs/: todos.md
frontend/: .dockerignore  Dockerfile  README.md  package-lock.json  package.json  wrangler.json  wrangler.toml
frontend-next/: package-lock.json  package.json
frontend-next/src/app/: index.css  layout.tsx  not-found.tsx  page.tsx
frontend-next/src/app/admin/: page.tsx
frontend-next/src/app/setup/: page.tsx
frontend-next/src/components/layout/: AppHeader.tsx
frontend-next/src/services/: api.ts
frontend-next/src/types/: index.ts
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.js  index.css  index.js
frontend/src/app/: app.css  index.css  layout.tsx  not-found.tsx  page.tsx
frontend/src/app/admin/: layout.tsx  page.tsx
frontend/src/app/interview/: layout.tsx  metadata.tsx
frontend/src/app/login/: layout.tsx  page.tsx
frontend/src/components/: AppHeader.js  AuthGuard.tsx  InterviewBreadcrumb.js  InterviewBreadcrumb.tsx
frontend/src/pages/: AdminPage.js  AdminSessionDetailPage.js  HomePage.js  InterviewPage.js  InterviewSetupPage.js  NotFoundPage.js  PositionTypeDetailPage.js  PositionTypesPage.js  ResultPage.js
frontend/src/services/: api.js  api.ts
frontend/src/types/: index.ts  interviewSchema.ts
frontend/src/utils/: extractAudioFromVideo.ts  formatEvaluationToMarkdown.js  formatEvaluationToMarkdown.ts  typeChat.js
(+29 files in other folders)
